# STARMAN

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: add-icon.cmake
src/: App.cpp  App.hpp  ConfigManager.cpp  ConfigManager.hpp  Scene.hpp  SceneIntro.cpp  SceneIntro.hpp  SceneManager.cpp  SceneManager.hpp  SceneMenu.cpp  SceneMenu.hpp  main.cpp
